# stderr

./: Cargo.toml  readme.md
examples/: main.rs
src/: lib.rs  log.rs  loger.rs  main.rs  static_mut.rs
src/log/: lvl.rs  macros.rs  mod.rs
tests/: main.rs
