[package]
name = "stderr"
version = "0.7.1"
authors = ["biluohc <biluohc@outlook.com>"]

description = "A library that using macro to write to io::stderr() like print!()/println!()."
# homepage = "..."
documentation = "https://docs.rs/stderr/"
repository = "https://github.com/biluohc/stderr"
readme = "readme.md"
keywords = ["err","errst","log","debug","print"]
license = "MIT"

[badges]
travis-ci = { repository = "biluohc/stderr" }

[dependencies]
time = "0.1"
# stderr= { path = "/home/viw/Documents/git/github/stderr" }

[[test]]
name ="main"
path="tests/main.rs"