[package]
name = "stderr"
version = "0.8.1"
authors = ["Wspsxing <biluohc@outlook.com>"]
license = "MIT"

description = "A library that using macro to write to io::stderr() like print!()/println!()."
# homepage = "..."
documentation = "https://docs.rs/stderr/"
repository = "https://github.com/biluohc/stderr"
readme = "readme.md"
categories = ["development-tools::procedural-macro-helpers","development-tools::debugging"]
keywords = ["err","macros","log","static","print"]

[badges]
travis-ci = { repository = "biluohc/stderr" }

[dependencies]
lazy_static = "^0.2.8"
time = "^0.1.37"
# stderr= { path = "/home/viw/Documents/git/github/stderr" }

[[test]]
name ="main"
path="tests/main.rs"